// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyCourseModalComponent > should snap when copying from other sessions 1`] = `
<tm-copy-course-modal
  COURSE_ID_MAX_LENGTH="undefined"
  COURSE_NAME_MAX_LENGTH="undefined"
  activeCourses={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  allCourses={[Function Array]}
  courseToFeedbackSession={[Function Object]}
  fetchFeedbackSessionsEvent={[Function EventEmitter_]}
  institutes={[Function Array]}
  isCopyFromOtherSession={[Function Boolean]}
  newCourseId=""
  newCourseIdIsConflicting="false"
  newCourseIdTouched="false"
  newCourseInstitute=""
  newCourseName=""
  newCourseNameTouched="false"
  newTimezone={[Function String]}
  oldCourseId=""
  oldCourseName=""
  selectedFeedbackSessions={[Function Set]}
  statusMessageService={[Function _StatusMessageService]}
  timezoneService={[Function _TimezoneService]}
  timezones={[Function Array]}
>
  <div
    class="modal-header"
  >
    <h5
      class="modal-title"
    >
      <div>
        Copy course
      </div>
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="copy-course-modal"
  >
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div>
          <label>
            <b>
              New Course
            </b>
          </label>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course ID:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-id"
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course ID should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course Name:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-name"
            placeholder="e.g. Software Engineering"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course Name should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="Note that you can only create a new course under an institute in which you are already a course co-owner."
            >
               Course institute: 
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-course-institute"
            >
            </select>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="You should not need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
            to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              Time Zone:
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-time-zone"
            >
              <option
                value="Asia/Singapore"
              >
                Asia/Singapore (UTC +08:00)
              </option>
              <option
                value="UTC"
              >
                UTC (UTC)
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary btn-margin-left"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course to copy from:
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="course-to-copy-from"
            >
            </select>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="btn-confirm-copy-course"
      type="button"
    >
       Copy 
    </button>
  </div>
</tm-copy-course-modal>
`;

exports[`CopyCourseModalComponent > should snap with default fields 1`] = `
<tm-copy-course-modal
  COURSE_ID_MAX_LENGTH="undefined"
  COURSE_NAME_MAX_LENGTH="undefined"
  activeCourses={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  allCourses={[Function Array]}
  courseToFeedbackSession={[Function Object]}
  fetchFeedbackSessionsEvent={[Function EventEmitter_]}
  institutes={[Function Array]}
  isCopyFromOtherSession="false"
  newCourseId=""
  newCourseIdIsConflicting="false"
  newCourseIdTouched="false"
  newCourseInstitute=""
  newCourseName=""
  newCourseNameTouched="false"
  newTimezone={[Function String]}
  oldCourseId=""
  oldCourseName=""
  selectedFeedbackSessions={[Function Set]}
  statusMessageService={[Function _StatusMessageService]}
  timezoneService={[Function _TimezoneService]}
  timezones={[Function Array]}
>
  <div
    class="modal-header"
  >
    <h5
      class="modal-title"
    >
      <div>
        Copy course
      </div>
      <small>
        Copy from: [] 
        <b>
        </b>
      </small>
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="copy-course-modal"
  >
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div>
          <label>
            <b>
              New Course
            </b>
          </label>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course ID:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-id"
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course ID should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course Name:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-name"
            placeholder="e.g. Software Engineering"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course Name should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="Note that you can only create a new course under an institute in which you are already a course co-owner."
            >
               Course institute: 
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-course-institute"
            >
            </select>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="You should not need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
            to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              Time Zone:
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-time-zone"
            >
              <option
                value="Asia/Singapore"
              >
                Asia/Singapore (UTC +08:00)
              </option>
              <option
                value="UTC"
              >
                UTC (UTC)
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary btn-margin-left"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="btn-confirm-copy-course"
      type="button"
    >
       Copy 
    </button>
  </div>
</tm-copy-course-modal>
`;

exports[`CopyCourseModalComponent > should snap with some course id 1`] = `
<tm-copy-course-modal
  COURSE_ID_MAX_LENGTH="undefined"
  COURSE_NAME_MAX_LENGTH="undefined"
  activeCourses={[Function Array]}
  activeModal={[Function NgbActiveModal]}
  allCourses={[Function Array]}
  courseToFeedbackSession={[Function Object]}
  fetchFeedbackSessionsEvent={[Function EventEmitter_]}
  institutes={[Function Array]}
  isCopyFromOtherSession="false"
  newCourseId={[Function String]}
  newCourseIdIsConflicting="false"
  newCourseIdTouched="false"
  newCourseInstitute=""
  newCourseName=""
  newCourseNameTouched="false"
  newTimezone={[Function String]}
  oldCourseId=""
  oldCourseName=""
  selectedFeedbackSessions={[Function Set]}
  statusMessageService={[Function _StatusMessageService]}
  timezoneService={[Function _TimezoneService]}
  timezones={[Function Array]}
>
  <div
    class="modal-header"
  >
    <h5
      class="modal-title"
    >
      <div>
        Copy course
      </div>
      <small>
        Copy from: [] 
        <b>
        </b>
      </small>
    </h5>
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div><div
    class="modal-body"
    id="copy-course-modal"
  >
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        <div>
          <label>
            <b>
              New Course
            </b>
          </label>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course ID:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-id"
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course ID should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label>
            Course Name:
          </label>
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="copy-course-name"
            placeholder="e.g. Software Engineering"
            type="text"
          />
          <span>
            NaN characters left
          </span>
          <div
            class="invalid-field"
            hidden=""
          >
            <i
              aria-hidden="true"
              class="fa fa-exclamation-circle"
            />
             The field Course Name should not be empty. 
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="Note that you can only create a new course under an institute in which you are already a course co-owner."
            >
               Course institute: 
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-course-institute"
            >
            </select>
          </div>
        </div>
        <div
          class="form-group"
        >
          <label
            class="ngb-tooltip-class"
          >
            <span
              ngbtooltip="You should not need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
            to match the current time offset in your area, including clock changes due to daylight saving time."
            >
              Time Zone:
            </span>
          </label>
          <div
            class="input-group"
          >
            <select
              class="form-control form-select ng-untouched ng-pristine ng-valid"
              id="copy-time-zone"
            >
              <option
                value="Asia/Singapore"
              >
                Asia/Singapore (UTC +08:00)
              </option>
              <option
                value="UTC"
              >
                UTC (UTC)
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary btn-margin-left"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div><div
    class="modal-footer"
  >
    <button
      class="btn btn-light"
      type="button"
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      disabled=""
      id="btn-confirm-copy-course"
      type="button"
    >
       Copy 
    </button>
  </div>
</tm-copy-course-modal>
`;
